Changed from recipes to games

--- a/games/lasagne.html
+++ b/games/lasagne.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Odin Games</title>
+    <title>Lasagne</title>
   </head>
   <body>
-    <h1>Odin Games</h1>
-    <a href="/games/zelda.html">Zelda</a>
+    <h1>Lasagne</h1>
   </body>
 </html>
