--- a/games/zelda.html
+++ b/games/zelda.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lasagne</title>
+    <title>Zelda</title>
   </head>
   <body>
-    <h1>Lasagne</h1>
+    <h1>Zelda</h1>
   </body>
 </html>
