Added games list with relative lins & their images

--- a/games/zelda.html
+++ b/games/zelda.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>Zelda</h1>
+    <img
+      src="/img/legend-of-zelda-box-art.jpg"
+      alt="The Legend of Zelda box art. A silver shield split into squares containing two hearts, a key and a lion."
+    />
   </body>
 </html>
