--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1>Odin Games</h1>
-    <a href="/games/zelda.html">Zelda</a>
+    <ul>
+      <li><a href="/games/zelda.html">Zelda</a></li>
+      <li><a href="/games/mario.html">Mario</a></li>
+      <li><a href="/games/pokemon.html">Pokemon</a></li>
+      <li><a href="/games/metroid.html">Metroid</a></li>
+      <li><a href="/games/animal-crossing.html">Animal Crossing</a></li>
+    </ul>
   </body>
 </html>
