Added game descriptions

--- a/games/animal-crossing.html
+++ b/games/animal-crossing.html
@@ -11,5 +11,11 @@
       src="/img/animal-crossing-box-art.jpg"
       alt="Animal Crossing's box art. A house with a red roof surrounded by shrubbery"
     />
+
+    <div>
+      <h2>Description</h2>
+
+      <p>Animal Crossing is a social simulation video game series developed and published by Nintendo. The series was conceptualized and created by Katsuya Eguchi and Hisashi Nogami. In Animal Crossing, the player character is a human who lives in a village inhabited by various anthropomorphic animals and can do various activities like fishing, insect catching, and fossil hunting. The series is notable for its open-ended gameplay and use of the video game console's internal clock and calendar to simulate real passage of time.</p>
+    </div>
   </body>
 </html>
