--- a/games/metroid.html
+++ b/games/metroid.html
@@ -11,5 +11,10 @@
       src="/img/metroid-prime-box-art.jpg"
       alt="Samus standing in a yellow factory, the Metroid Prime logo, a red circle outlined by a metallic grey with a metallic bolt running through it"
     />
+    <div>
+      <h2>Description</h2>
+
+      <p>Metroid is an action-adventure game franchise created by Nintendo. The player controls the bounty hunter Samus Aran, who protects the galaxy from Space Pirates and other malevolent forces and their attempts to harness the power of the parasitic Metroid creatures.</p>
+    </div>
   </body>
 </html>
