--- a/games/pokemon.html
+++ b/games/pokemon.html
@@ -13,5 +13,11 @@
     Charizard surrounded by the text 'Pocket Monsters' on a grey and red
     background."
     />
+
+    <div>
+      <h2>Description</h2>
+
+      <p>Pokémon is a Japanese media franchise consisting of video games, animated series and films, a trading card game, and other related media. The franchise takes place in a shared universe in which humans co-exist with creatures known as Pokémon, a large variety of species endowed with special powers. The franchise's target audience is children aged 5 to 12, but it is known to attract people of all ages.</p>
+    </div>
   </body>
 </html>
