--- a/games/zelda.html
+++ b/games/zelda.html
@@ -11,5 +11,11 @@
       src="/img/legend-of-zelda-box-art.jpg"
       alt="The Legend of Zelda box art. A silver shield split into squares containing two hearts, a key and a lion."
     />
+
+    <div>
+      <h2>Description</h2>
+
+      <p>The Legend of Zelda is an action-adventure game franchise created by the Japanese game designers Shigeru Miyamoto and Takashi Tezuka. It is primarily developed and published by Nintendo, although some portable installments and re-releases have been outsourced to Flagship, Vanpool, and Grezzo. The gameplay incorporates action-adventure and elements of action RPG games.</p>
+    </div>
   </body>
 </html>
