Page styling with color palette and list styles

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Odin Games</title>
   </head>
   <body>
-    <h1>Odin Games</h1>
-    <ul>
-      <li><a href="/games/zelda.html">Zelda</a></li>
-      <li><a href="/games/mario.html">Mario</a></li>
-      <li><a href="/games/pokemon.html">Pokemon</a></li>
-      <li><a href="/games/metroid.html">Metroid</a></li>
-      <li><a href="/games/animal-crossing.html">Animal Crossing</a></li>
+    <h1 class="title">Odin Games</h1>
+    <ul class="list">
+      <li class="link-1"><a href="/games/zelda.html">Zelda</a></li>
+      <li class="link-2"><a href="/games/mario.html">Mario</a></li>
+      <li class="link-3"><a href="/games/pokemon.html">Pokemon</a></li>
+      <li class="link-4"><a href="/games/metroid.html">Metroid</a></li>
+      <li class="link-5"><a href="/games/animal-crossing.html">Animal Crossing</a></li>
     </ul>
   </body>
 </html>
